--- a/architecture-examples/backbone/components/todomvc-common/base.css
+++ b/architecture-examples/backbone/components/todomvc-common/base.css
@@ -110,10 +110,10 @@ body {
 }
 
 #new-todo,
-.edit {
+.edit,
+#new-user {
 	position: relative;
 	margin: 0;
-	width: 100%;
 	font-size: 24px;
 	font-family: inherit;
 	line-height: 1.4em;
@@ -135,12 +135,27 @@ body {
 	font-smoothing: antialiased;
 }
 
-#new-todo {
-	padding: 16px 16px 16px 60px;
+.edit {
+	width: 100%;
+}
+
+
+#new-todo, #new-user {
+	padding: 16px 16px 16px 0px;
 	border: none;
 	background: rgba(0, 0, 0, 0.02);
 	z-index: 2;
 	box-shadow: none;
+}
+
+#new-todo {
+	padding-left:60px;
+	width:70%;
+}
+#new-user {
+	width:30%;
+	right:0;
+	position:absolute;
 }
 
 #main {
